--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 host_key_checking = False
-inventory = /home/student/mycode/inv/dev/
-roles_path = /home/student/mycode/roles
+inventory = /home/student/reg/hosts/
+retry_files_enabled = False
